# AmberPrep

./: .dockerignore  .gitignore  Dockerfile  Fill_missing_residues.py  Homology_modeling.py  MANIFEST.in  README.md  SETUP_STEPS.md  pyproject.toml  start_web_server.py
Test/: pdb_tracking.xlsx
Test/1HPV/: ANTECHAMBER.FRCMOD  ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  HeatNPT.mdinfo  HeatNPT.ncrst  HeatNPT.out  L78.frcmod  L78.mol2  calc_charge_on_system.in  generate_ff_parameters.in  mdin_equi.mdinfo  mdin_equi.ncrst  mdin_equi.out  mdin_prod.in  mdin_prod.mdinfo  mdin_prod.ncrst  mdin_prod.out  min.in  min.mdinfo  min.ncrst  min.out  min_res.mdinfo  min_res.ncrst  min_restrained.in  min_restrained.out  sqm.in  sqm.out  submit_job.pbs
Test/1HSG/: ANTECHAMBER.FRCMOD  ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  HeatNPT.in  HeatNPT.mdinfo  HeatNPT.ncrst  HeatNPT.out  MK1.frcmod  MK1.mol2  calc_charge_on_system.in  generate_ff_parameters.in  mdin_equi.in  mdin_equi.mdinfo  mdin_equi.ncrst  mdin_equi.out  mdin_prod.mdinfo  mdin_prod.ncrst  mdin_prod.out  min.mdinfo  min.ncrst  min.out  min_res.mdinfo  min_res.ncrst  min_restrained.in  min_restrained.out  slurm-23130.out  slurm-23131.out  slurm-23132.out  sqm.in  sqm.out  submit_job.pbs
Test/1KE5/: 1KE5_chains_with_missing.fasta  ANTECHAMBER.FRCMOD  ANTECHAMBER_AC.AC  ANTECHAMBER_AM1BCC.AC  ANTECHAMBER_AM1BCC_PRE.AC  ANTECHAMBER_BOND_TYPE.AC  ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  HeatNPT.mdinfo  HeatNPT.ncrst  HeatNPT.out  LS1.frcmod  LS1.mol2  calc_charge_on_system.in  generate_ff_parameters.in  mdin_equi.mdinfo  mdin_equi.ncrst  mdin_equi.out  mdin_prod.mdinfo  mdin_prod.ncrst  mdin_prod.out  mdinfo  min.mdinfo  min.ncrst  min.out  min_A.in  min_A.out  min_res.mdinfo  min_res.ncrst  min_restrained.in  min_restrained.out  slurm-23135.out  sqm.in  sqm.out  submit_job.pbs  tleap_A.in
amberflow/: __init__.py  __main__.py  app.py  docking_utils.py
amberflow/js/: script.js
amberprep/: __init__.py  structure_preparation.py
amberprep/css/: styles.css
amberprep/html/: index.html
amberprep/js/: script.js
css/: plumed.css  styles.css
html/: index.html
js/: plumed.js  plumed_cv_docs.js  script.js
python/: app.py  docking_instructuon_backup.txt  structure_preparation.py
(+31 files in other folders)
