[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amberflow"
version = "0.1.0"
description = "Web-based MD simulation pipeline with AMBER, ESMFold, docking, and PLUMED"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hemant Nagar", email = "hn533621@ohio.edu"}
]
keywords = [
    "molecular-dynamics",
    "amber",
    "md-simulation",
    "protein-structure",
    "esmfold",
    "docking",
    "autodock-vina",
    "plumed",
    "computational-chemistry",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.10"

# Core dependencies installable via pip
# Note: ambertools, pymol, vina, openbabel require conda installation BEFORE pip install
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "biopython>=1.81",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mdanalysis>=2.5.0",
    "gunicorn>=21.0.0",
    "requests>=2.31.0",
    "rdkit",
    "gemmi",
    "meeko>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/hemantn/AmberFlow"
Documentation = "https://github.com/nagarh/AmberFlow"
Repository = "https://github.com/nagarh/AmberFlow"
Issues = "https://github.com/nagarh/AmberFlow/issues"

[project.scripts]
amberflow = "amberflow.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["amberflow*"]

[tool.setuptools.package-data]
amberflow = [
    "html/*.html",
    "css/*.css",
    "js/*.js",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
